[Wayland/Sway] File chooser dialog doesn't show up anymore
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | unaffected |
| firefox78 | --- | fixed |
People
(Reporter: matias, Assigned: stransky)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(4 files)
After bug 1635718 was patched, the file chooser dialog stopped working on Sway:
(firefox:5789): Gdk-WARNING **: 10:41:57.438: Server is missing xdg_foreign support
(firefox:5789): Gtk-WARNING **: 10:41:57.438: Failed to export handle, could not set transient for
(firefox:5789): Gtk-WARNING **: 10:41:57.440: Can't open portal file chooser: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: No such interface “org.freedesktop.portal.FileChooser” on object at path /org/freedesktop/portal/desktop
Regarding the first message, please see https://github.com/swaywm/sway/issues/3273#issuecomment-445519370
There should be a fallback if xdg_foreign support is missing or at least a way to configure whether to use portal for the file dialog.
Updated•5 years ago
|
Updated•5 years ago
|
| Assignee | ||
Comment 1•5 years ago
|
||
Okay, I'll look at it.
| Assignee | ||
Comment 2•5 years ago
|
||
| Assignee | ||
Updated•5 years ago
|
| Assignee | ||
Comment 3•5 years ago
|
||
With the patch here you need to add widget.use-xdg-desktop-portal boolean pref value at about:config and set it to false.
Comment 6•5 years ago
|
||
| bugherder | ||
Comment 7•5 years ago
|
||
Gnome Wayland is my second desktop on Debian Testing. (main is KDE)
The file picker does not show up by default. This pref is inexistent by default. It works after creating widget.use-xdg-desktop-portal and setting it to false. I assume current behavior is not desired.
Updated•5 years ago
|
| Assignee | ||
Comment 8•5 years ago
|
||
(In reply to Jan Andre Ikenmeyer [:darkspirit] from comment #7)
Gnome Wayland is my second desktop on Debian Testing. (main is KDE)
The file picker does not show up by default. This pref is inexistent by default. It works after creating widget.use-xdg-desktop-portal and setting it to false. I assume current behavior is not desired.
It should be enabled and working under Gnome/KDE. In KDE you should get KDE native file dialog instead of the Gtk one.
Do you have any error message on console/terminal?
| Assignee | ||
Comment 9•5 years ago
|
||
Guys, can you please attach a a wayland log from sway and other non-working environments? Get it by:
WAYLAND_DEBUG=1 MOZ_ENABLE_WAYLAND=1 ./firefox
Thanks.
| Assignee | ||
Updated•5 years ago
|
Comment 10•5 years ago
•
|
||
Gnome Wayland, Debian Testing
WAYLAND_DEBUG=1 MOZ_ENABLE_WAYLAND=1 mozregression --launch 2020-05-25 --pref gfx.webrender.all:true --process-output stdout -a https://interactive-examples.mdn.mozilla.net/pages/tabbed/input-file.html &> filepicker.txt
gnome-core does not depend on https://packages.debian.org/bullseye/xdg-desktop-portal.
Only flatpak would need xdg-desktop-portal. I have confirmed this with debtree gnome-core.
Comment 11•5 years ago
|
||
Comment 12•5 years ago
|
||
Same with Plasma Wayland on Debian Testing:
0:28.51 INFO: b"(firefox:64147): Gtk-WARNING **: 18:03:17.718: Can't open portal file chooser: GDBus.Error:org.freedesktop.DBus.Error.ServiceUnknown: The name org.freedesktop.portal.Desktop was not provided by any .service files"
Comment 13•5 years ago
•
|
||
With Ubuntu 20.04 it's less likely to hit this problem: ubuntu-desktop-minimal depends on xdg-desktop-portal-gtk.
On Debian Testing it is only required by flatpak.
| Assignee | ||
Comment 14•5 years ago
|
||
Comment 15•5 years ago
|
||
Comment 16•5 years ago
|
||
| bugherder | ||
| Reporter | ||
Comment 17•5 years ago
|
||
On Sway with widget.use-xdg-desktop-portal set to true, after pressing Ctrl+S:
[3619079,071] wl_keyboard@78.key(472964, 229959748, 31, 0)
[3619079,108] wl_keyboard@29.key(472964, 229959748, 31, 0)
[3619331,528] wl_keyboard@78.key(472965, 229960000, 31, 1)
[3619331,565] wl_keyboard@29.key(472965, 229960000, 31, 1)
(firefox:1596780): Gdk-WARNING **: 10:50:20.903: Server is missing xdg_foreign support
(firefox:1596780): Gtk-WARNING **: 10:50:20.903: Failed to export handle, could not set transient for
(firefox:1596780): Gtk-WARNING **: 10:50:20.905: Can't open portal file chooser: GDBus.Error:org.freedesktop.DBus.Error.UnknownMethod: No such interface “org.freedesktop.portal.FileChooser” on object at path /org/freedesktop/portal/desktop
I do have xdg-desktop-portal installed, because it is a requisite for screen sharing support. Installing xdg-desktop-portal-gtk does not change the warning messages.
Description
•