Bug 1639575 [Wayland] Use native file dialog when widget.use-xdg-desktop-portal is set to false, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D76449